--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kolkov/angular-editor",
+  "name": "angular-editor-kapibara",
   "version": "1.2.1",
   "scripts": {
     "ng": "ng",
