--- a/projects/angular-editor/package.json
+++ b/projects/angular-editor/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@kolkov/angular-editor",
-  "version": "1.2.0",
+  "name": "angular-editor-kapibara",
+  "version": "1.2.1",
   "description": "A simple native WYSIWYG editor for Angular 8+, 12+. Rich Text editor component for Angular.",
   "author": "Andrey Kolkov <a.kolkov@gmail.com>",
-  "repository": "https://github.com/kolkov/angular-editor",
+  "repository": "https://github.com/Hovelacque/angular-editor",
   "license": "MIT",
   "private": false,
   "bugs": {
-    "url": "https://github.com/kolkov/angular-editor/issues"
+    "url": "https://github.com/Hovelacque/angular-editor/issues"
   },
   "peerDependencies": {
     "@angular/common": ">=8.0.0 <13",
